--- a/main.css
+++ b/main.css
@@ -4,10 +4,15 @@
     display: flex;
     align-items: left;
     padding: 10px 10px 10px 10px;
+    
 }
 .logo {
     width: 110px;
     height: 100px;
 }
+.links{
+    padding:10px 10px 10px;
+}
+
 /* Carousel */
 /* Footer */
