--- a/main.css
+++ b/main.css
@@ -5,15 +5,28 @@
     align-items: left;
     padding: 10px 10px 10px 10px;
     
+    
 }
 .logo {
     width: 110px;
     height: 100px;
 }
 .links{
-    padding:10px 10px 10px;
+    padding:10px 10px 10px 10px;
+    margin: 10px 10px 10px 10px;
+    padding-top: 40px;
     text-decoration: none;
     
+}
+.motto{
+    padding: 10px 10px 10px 10px;
+    padding-top: 40px;
+    margin: 10px 10px 10px 10px;
+}
+.name{
+    padding: 10px 10px 10px;
+    text-align: center;
+    margin: 10px 10px 10px 10px;
 }
 
 /* Carousel */
