--- a/main.css
+++ b/main.css
@@ -15,7 +15,10 @@
     padding:10px 10px 10px 10px;
     margin: 10px 10px 10px 10px;
     padding-top: 40px;
+    margin-right: 30px;
+    margin-left: 30px;
     text-decoration: none;
+    color: black;
     
 }
 .motto{
