--- a/main.css
+++ b/main.css
@@ -4,12 +4,13 @@
     display: flex;
     align-items: left;
     padding: 10px 10px 10px 10px;
-    
+    background-color: rgb(37, 106, 170);   
     
 }
 .logo {
     width: 110px;
     height: 100px;
+    
 }
 .links{
     padding:10px 10px 10px 10px;
@@ -18,18 +19,20 @@
     margin-right: 30px;
     margin-left: 30px;
     text-decoration: none;
-    color: black;
-    
+    color: white;
+        
 }
 .motto{
     padding: 10px 10px 10px 10px;
     padding-top: 40px;
     margin: 10px 10px 10px 10px;
+    color: white;
 }
 .name{
     padding: 10px 10px 10px;
     text-align: center;
     margin: 10px 10px 10px 10px;
+    color:white;
 }
 
 /* Carousel */
