--- a/main.css
+++ b/main.css
@@ -36,5 +36,43 @@
 }
 
 /* Carousel */
+    .carousel-item{
+        height:32rem;
+        background: white;
+        position: relative;
+        background-position: center;
+        background-size: cover;
+    }
+    .container{
+        position:absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding-bottom: 50px;
+    }
+
+    .overlay-image1{
+        position:absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-position: center;
+        background-size: cover;
+        background-image: url(_dte_final_assessment\Images\slide-1.jpg);
+        opacity: 0.5;
+
+    }
+
+    .overlay-image2{
+        position:absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-position: center;
+        background-size: cover;
+        background-image: url(_dte_final_assessment\Images\slide-2.jpg);
+        opacity: 0.5;
+
+    }
 
 /* Footer */
