--- a/main.css
+++ b/main.css
@@ -40,8 +40,13 @@
         height:32rem;
         background: grey;
         position: relative;
-        
+        background-position: center;
+        background-size: cover;
        
     }
- 
+    .image{
+        height: 512px;
+        margin-left: 500px;
+        margin-right: 500px;
+    }
 /* Footer */
