--- a/main.css
+++ b/main.css
@@ -59,3 +59,10 @@
     color: rgb(255, 255, 255);
 }
 /* Footer */
+.footer{
+    display: flex;
+    padding: 10px 10px 10px;
+    margin: 10px 10px 10px;
+    background-color:  rgb(37, 106, 170);
+    color: rgb(255, 255, 255);
+}
