--- a/main.css
+++ b/main.css
@@ -28,6 +28,8 @@
     padding-bottom: 10px;
     margin: 10px 10px 10px 10px;
     color: rgb(0, 0, 0);
+    border: 5px solid red;
+    
 }
 .name{
     padding: 10px 10px 10px;
@@ -36,7 +38,7 @@
     color:white;
 }
 .links:hover{
-    color:white;
+    color:rgb(255, 251, 251);
 }
 
 /* Carousel */
@@ -67,6 +69,8 @@
 h2{
     text-align: center;
     padding: 10px 10px 10px;
+    font-style: bold;
+    font-size: 30px;
 }
 span{
     color:rgb(37, 106, 170);
@@ -201,16 +205,13 @@ h5{
 /* Digital Technology */
 .table{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-direction: row;
 } 
-.imgs{
-    display: flex;
-    flex-direction: column;
-}
 
 .staffimg{
     width: 100px;
     height: 150px;
-    display: block;
+    
 }
+
