--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@
     background-color: rgb(37, 106, 170);   
     
 }
+/* School Logo */
 .logo {
     width: 110px;
     height: 100px;
@@ -24,7 +25,12 @@
     color: white;
         
 }
-/* Motto motto */
+/* Changes color when you hover over it */
+.links:hover{
+    color: rgb(202, 200, 200);
+    text-decoration: underline red 4px;
+}
+/* Motto  */
 .motto{
     padding: 10px 10px 10px 10px;
     padding-top: 10px;
@@ -40,9 +46,7 @@
     margin: 10px 10px 10px 10px;
     color:white;
 }
-.links:hover{
-    color:rgb(255, 251, 251);
-}
+
 
 /* Carousel */
 .container{
@@ -66,9 +70,13 @@
     flex-direction: column;
     padding: 10px 10px 10px;
     margin: 10px 10px 10px;
-    background-color: rgb(0, 0, 70);
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 18px;
 }
+/* Headings for things */
 h2{
     text-align: center;
     padding: 10px 10px 10px;
@@ -77,20 +85,37 @@ h2{
     font-weight: 400;
     font-style: normal;
 }
+
 span{
-    color:rgb(37, 106, 170);
-    font-size: large;
+    color:rgb(0, 0, 0);
+    font-size: 25px;
     font-family: "Pangolin", cursive;
     font-weight: 400;
     font-style: normal;
+
     
 }
+/* Quote of something */
 .quote{
     border: 5px solid rgb(37, 106, 170) ;
     background-color: white;
     padding: 10px 10px 10px 10px;
     text-align: center;
+    font-size: 30px;
+    font-family: "Pangolin", cursive;
+    font-weight: 400;
+    font-style: normal;
+    
 }
+/* The top part of the body text */
+.aboutp1{
+    color:rgb(0, 0, 0);
+    font-size: 33px;
+    font-family: "Pangolin", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
 /* Footer */
 .footer{
     display: flex;
@@ -112,6 +137,10 @@ span{
     text-align: center;
     color: white;
     margin: 10px 10px 10px 10px;
+}
+.sitemap:hover{
+    color: rgb(202, 200, 200);
+    text-decoration: underline red 4px;
 }
 h5{
     text-decoration: underline;
@@ -210,7 +239,7 @@ h5{
     flex-direction: row;
 }
 /* Staff Page */
-/* Digital Technology */
+/* Table for staff */
 
 .table{
     display: flex;
