--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ h2{
     text-align: center;
     padding: 10px 10px 10px;
     font-size: 30px;
-    font-family: "Pangolin", cursive;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -85,7 +85,8 @@ h2{
 span{
     color:rgb(0, 0, 0);
     font-size: 25px;
-    font-family: "Pangolin", cursive;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
 
@@ -98,7 +99,7 @@ span{
     padding: 10px 10px 10px 10px;
     text-align: center;
     font-size: 30px;
-    font-family: "Pangolin", cursive;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-style: normal;
     
@@ -107,7 +108,7 @@ span{
 .aboutp1{
     color:rgb(0, 0, 0);
     font-size: 33px;
-    font-family: "Pangolin", cursive;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
