--- a/main.css
+++ b/main.css
@@ -95,13 +95,12 @@ span{
 /* Quote of something */
 .quote{
     border: 5px solid rgb(37, 106, 170) ;
-    background-color: white;
     padding: 10px 10px 10px 10px;
     text-align: center;
     font-size: 25px;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    font-style: normal;
+    font-style: italic;
     
 }
 /* The top part of the body text */
@@ -259,6 +258,7 @@ h5{
 .staffimg{
     width: 150px;
     height: 200px;
+    padding-bottom: 20px;
    
 }
 /* Departments */
