Comments added tos ylesheet

--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+/* --------------------------------
+    Stylesheet for Rosmini Website
+    File: stylesheet
+    Author: Szymon Merilles
+    Date: 25/03/2025
+   -------------------------------- */
+
+
+
 /* Not AI Trust */
 /* Home Page */
 /* Navbar */
