--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@
     padding-bottom: 10px;
     margin: 10px 10px 10px 10px;
     color: rgb(0, 0, 0);
-    border: 5px solid  rgb(255, 29, 29);
+    
     
 }
 /* School Name */
@@ -259,7 +259,8 @@ h5{
 
 .table{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    flex-direction: row;
     text-align: center;
     padding: 10px 10px 10px 10px;
 } 
@@ -268,11 +269,19 @@ h5{
     width: 150px;
     height: 200px;
     padding-bottom: 20px;
+    padding-right: 30px;
    
 }
+p{
+    padding-right:10px;
+    padding-left:10px;
+    vertical-align: text-top;
+}
+
 /* Departments */
 .pos{
     font-size: 22px;
+    
 }
 /* Header */
 .staff{
