--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@
     padding-bottom: 10px;
     margin: 10px 10px 10px 10px;
     color: rgb(0, 0, 0);
-    
+    background-color: lightblue;
     
 }
 /* School Name */
@@ -259,9 +259,9 @@ h5{
 
 .table{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: left;
     flex-direction: row;
-    text-align: center;
+    text-align: left;
     padding: 10px 10px 10px 10px;
 } 
 
@@ -269,22 +269,20 @@ h5{
     width: 150px;
     height: 200px;
     padding-bottom: 20px;
-    padding-right: 30px;
+    padding-right: 20px;
    
 }
 p{
     padding-right:10px;
     padding-left:10px;
-    vertical-align: text-top;
+    
 }
 
 /* Departments */
 .pos{
-    font-size: 22px;
-    
+    font-size: 35px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
-/* Header */
-.staff{
-    text-align: center;
-    
-}
+
