--- a/main.css
+++ b/main.css
@@ -259,23 +259,24 @@ h5{
 
 .table{
     display: flex;
-    justify-content: left;
+    justify-content: flex-start;
     flex-direction: row;
     text-align: left;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 10px; 
+    
 } 
 
 .staffimg{
     width: 150px;
     height: 200px;
     padding-bottom: 20px;
-    padding-right: 20px;
-   
+    margin-right: 20px ;
+    
+    
 }
 p{
-    padding-right:10px;
-    padding-left:10px;
     
+    text-align: left;
 }
 
 /* Departments */
