--- a/main.css
+++ b/main.css
@@ -45,7 +45,9 @@
     padding-bottom: 10px;
     margin: 10px 10px 10px 10px;
     color: rgb(0, 0, 0);
-    background-color: lightblue;
+    background-image: linear-gradient( to right,rgba(0, 0, 128,0.8), rgba(37,106,170,0.7) , rgba(255,255,255,0));
+    background-size: cover;
+    background-repeat: no-repeat;
     
 }
 /* School Name */
@@ -271,14 +273,16 @@ h5{
     height: 200px;
     padding-bottom: 20px;
     margin-right: 20px ;
-    
-    
+       
 }
-p{
-    
+.p{
     text-align: left;
 }
 
+td{
+    height: 170px;
+    width: 295.333px;
+}
 /* Departments */
 .pos{
     font-size: 35px;
