--- a/main.css
+++ b/main.css
@@ -15,7 +15,9 @@
     display: flex;
     padding: 10px 10px 10px 10px;
     background-color: rgb(37, 106, 170);   
-    
+    margin-bottom: 0.1px;
+    background-size: cover;
+    border-radius: 0px;
 }
 /* School Logo */
 .logo {
@@ -43,11 +45,13 @@
     padding: 10px 10px 10px 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin: 10px 10px 10px 10px;
     color: rgb(0, 0, 0);
-    background-image: linear-gradient( to right,rgba(0, 0, 128,0.8), rgba(37,106,170,0.7) , rgba(255,255,255,0));
+    background-image: linear-gradient( to right, rgba(37,106,170,1),rgba(37,106,170,1) , rgba(255,255,255,0));
     background-size: cover;
     background-repeat: no-repeat;
+    margin-bottom: 2px;
+    letter-spacing: 10px;
+    word-spacing: 20px;
     
 }
 /* School Name */
@@ -78,6 +82,7 @@
     flex-direction: column;
     padding: 10px 10px 10px;
     margin: 10px 10px 10px;
+    padding-top: 40px;
     color: rgb(0, 0, 0);
     text-align: center;
     padding-left: 50px;
@@ -89,7 +94,7 @@ h2{
     text-align: center;
     padding: 10px 10px 10px;
     font-size: 30px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
     font-weight: 400;
     font-style: normal;
 }
@@ -97,7 +102,7 @@ h2{
 span{
     color:rgb(0, 0, 0);
     font-size: 17px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
     font-weight: 400;
     font-style: normal;
     
@@ -109,7 +114,7 @@ span{
     padding: 10px 10px 10px 10px;
     text-align: center;
     font-size: 25px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
     font-weight: 400;
     font-style: italic;
     
@@ -118,7 +123,7 @@ span{
 .aboutp1{
     color:rgb(0, 0, 0);
     font-size: 19px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
     font-weight: 400;
     font-style: normal;
 }
@@ -129,7 +134,6 @@ span{
     text-align: center;
     justify-content: space-around ;  
     padding: 10px 10px 10px;
-    margin: 10px 10px 10px;
     background-color:  rgb(37, 106, 170);
     color: rgb(255, 255, 255);
        
@@ -178,7 +182,7 @@ h5{
 .txt{
     text-align: center;
     font-size: 20px;
-    color: rgb(37, 106, 170);
+    color: navy;
     font-weight: bolder;
 }
 /* Group 1 */
