--- a/main.css
+++ b/main.css
@@ -45,8 +45,8 @@
     padding: 10px 10px 10px 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: rgb(0, 0, 0);
-    background-image: linear-gradient( to right, rgba(37,106,170,1),rgba(37,106,170,1) , rgba(255,255,255,0));
+    color: white;
+    background-color: navy;
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 2px;
