--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,7 +14,7 @@
 .navbar{
     display: flex;
     padding: 10px 10px 10px 10px;
-    background-color: rgb(37, 106, 170);   
+    background-color: rgb(0,84,162);   
     margin-bottom: 0.1px;
     background-size: cover;
     border-radius: 0px;
@@ -23,6 +23,7 @@
 .logo {
     width: 110px;
     height: 100px;
+    
     
 }
 .links{
@@ -46,7 +47,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
-    background-color:rgb(37, 105, 170) ;
+    background-color:rgb(0,84,162) ;
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 2px;
@@ -100,7 +101,7 @@ h2{
 }
 
 span{
-    color:navy;
+    color:rgb(0,84,162);
     font-size: 17px;
     font-family: "Montserrat";
     font-weight: 400;
@@ -118,7 +119,7 @@ span{
 }
 /* Quote of something */
 .quote{
-    border: 5px solid rgb(37, 106, 170) ;
+    border: 5px solid rgb(0,84,162) ;
     padding: 10px 10px 10px 10px;
     text-align: center;
     font-size: 25px;
@@ -142,7 +143,7 @@ span{
     text-align: center;
     justify-content: space-around ;  
     padding: 10px 10px 10px;
-    background-color:  rgb(37, 106, 170);
+    background-color:  rgb(0,84,162);
     color: rgb(255, 255, 255);
        
 }
@@ -173,7 +174,7 @@ h5{
 /* Sports Page */
 /* We are committed text */
 .commitment{
-    color:navy;
+    color:rgb(0,84,162);
     font-size: 25px;
     font-family: "Montserrat";
     font-weight: 800;
@@ -190,7 +191,7 @@ h5{
 .txt{
     text-align: center;
     font-size: 20px;
-    color: navy;
+    color: rgb(0,84,162);
     font-weight: bolder;
     font-family: "Montserrat", sans-serif;
     font-weight: 800;
